# pkg/middleware/request_signature_middleware.go
@@ -2,34 +2,39 @@ package middleware
 
 import (
 	"bytes"
+	"context"
 	"io"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/gin-gonic/gin"
-	"github.com/guyuxiang/projectc-custodial-wallet/pkg/config"
 	"github.com/guyuxiang/projectc-custodial-wallet/pkg/models"
+	"github.com/guyuxiang/projectc-custodial-wallet/pkg/service"
 	"github.com/guyuxiang/projectc-custodial-wallet/pkg/signature"
 )
 
 func RequestSignatureMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		cfg := config.GetConfig()
-		if cfg == nil || cfg.Signature == nil || cfg.Signature.APIKey == "" || cfg.Signature.PublicKey == "" {
-			c.Next()
+		app := service.GetApp()
+		if app == nil || app.SignatureKey == nil {
+			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodeSystemBusy, Message: "signature service is unavailable", Data: struct{}{}})
 			return
 		}
-
-		apiKey := c.GetHeader("X-API-Key")
+		publickeyID := c.GetHeader("X-Publickey-ID")
 		timestamp := c.GetHeader("X-Timestamp")
 		signatureValue := c.GetHeader("X-Signature")
-		if apiKey == "" || timestamp == "" || signatureValue == "" {
+		if publickeyID == "" || timestamp == "" || signatureValue == "" {
 			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodeSignatureInvalid, Message: "missing signature headers", Data: struct{}{}})
 			return
 		}
-		if apiKey != cfg.Signature.APIKey {
-			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodePermissionDenied, Message: "invalid api key", Data: struct{}{}})
+		key, err := app.SignatureKey.GetKeyByID(context.Background(), publickeyID)
+		if err != nil {
+			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodeSystemBusy, Message: err.Error(), Data: struct{}{}})
+			return
+		}
+		if key == nil || key.PublicKey == "" {
+			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodePermissionDenied, Message: "invalid publickey id", Data: struct{}{}})
 			return
 		}
 
@@ -38,10 +43,7 @@ func RequestSignatureMiddleware() gin.HandlerFunc {
 			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodeSignatureInvalid, Message: "invalid timestamp", Data: struct{}{}})
 			return
 		}
-		maxSkew := cfg.Signature.MaxSkewMillis
-		if maxSkew <= 0 {
-			maxSkew = 300000
-		}
+		maxSkew := int64(300000)
 		if absDuration(time.Now().UnixMilli()-ts) > maxSkew {
 			c.AbortWithStatusJSON(http.StatusOK, models.Response{Code: models.CodeSignatureInvalid, Message: "timestamp expired", Data: struct{}{}})
 			return
@@ -55,7 +57,7 @@ func RequestSignatureMiddleware() gin.HandlerFunc {
 		c.Request.Body = io.NopCloser(bytes.NewReader(body))
 
 		if err := signature.VerifyBase64(
-			cfg.Signature.PublicKey,
+			key.PublicKey,
 			signatureValue,
 			c.Request.Method,
 			c.Request.URL.Path,
